infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - argocd.klaforge.dev
      secretName: argocd-klaforge-dev-tls

  rules:
    - host: argocd.klaforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
